# surgical-robotics-safety

./: CMakeLists.txt  PROJECT_SHOWCASE.md  README.md  txt
.github/workflows/: ci_cd.yml
analytics/: ml_anomaly_detector.py  performance_analyzer.py  requirements.txt
config/: dds_config.xml  robot_config.yaml  safety_parameters.json  surgical_procedures.json
core_engine/: CMakeLists.txt  collision_detector.cpp  collision_detector.h  kinematics_solver.cpp  kinematics_solver.h  real_time_controller.cpp  real_time_controller.h  safety_demo.cpp  safety_monitor.cpp  safety_monitor.h
dashboard/: app.py  real_time_monitor.py  requirements.txt
dashboard/assets/: style.css
dds_integration/: CMakeLists.txt  command_subscriber.cpp  command_subscriber.h  data_publisher.cpp  data_publisher.h
scripts/: build_project.sh  setup_environment.sh
testing/: CMakeLists.txt  test_analytics.py  test_basic.py  test_kinematics.cpp  test_safety_monitor.cpp
